--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,1 +1,3 @@
-<h1>Doctors#show</h1>
+<h1><%= @doctor.name %></h1>
+
+<%= link_to 'Delete Doctor', @doctor, method: :delete, class: "ui red button inverted" %>
